SK-291: detect offline status

--- a/src/views/SendToken/SendToken.module.css
+++ b/src/views/SendToken/SendToken.module.css
@@ -108,6 +108,14 @@
   composes: tooltip from '../../components/ErrorTooltip/ErrorTooltip.module.css';
 }
 
+.submitLine {
+  position: relative;
+}
+
 .submit {
   composes: buttonPrimary from '../../components/Button/Button.module.css';
+}
+
+.offlineError {
+  composes: tooltip from '../../components/ErrorTooltip/ErrorTooltip.module.css';
 }
