--- a/src/components/TxStatusModal/TxStatusModal.module.css
+++ b/src/components/TxStatusModal/TxStatusModal.module.css
@@ -47,3 +47,9 @@
   padding: 0 3.5rem;
   margin-top: 0.75rem;
 }
+
+.subscan {
+  composes: buttonSecondary from '../../components/Button/Button.module.css';
+  padding: 0.5rem 0 1rem 0;
+  background: url('../images/subscan-logo-full.svg') no-repeat bottom center/50%;
+}
