--- a/src/views/IdentityOverview/IdentityOverview.module.css
+++ b/src/views/IdentityOverview/IdentityOverview.module.css
@@ -31,3 +31,12 @@
 .credentials {
   composes: buttonSecondary from '../../components/Button/Button.module.css';
 }
+
+.subscan {
+  composes: buttonPrimary from '../../components/Button/Button.module.css';
+  padding-left: 3rem;
+  padding-right: 6rem;
+  border: none;
+  box-shadow: none;
+  background: url('../../components/images/subscan-logo.svg') no-repeat 0.75rem center, rgba(0, 0, 0, 0.3)  url('../../components/images/chevron-right.svg') no-repeat right 5% center/0.375rem 0.75rem;
+}
