--- a/src/views/SignQuote/SignQuote.module.css
+++ b/src/views/SignQuote/SignQuote.module.css
@@ -8,6 +8,7 @@
 .heading {
   composes: screenHeadline from '../../components/Typography/Typography.module.css';
   margin: 0;
+  padding-bottom: 1rem;
 }
 
 .subline {
