--- a/src/components/IdentitySlide/IdentitySlide.module.css
+++ b/src/components/IdentitySlide/IdentitySlide.module.css
@@ -45,19 +45,9 @@
   composes: buttonCross from '../Button/Button.module.css';
 }
 
-.new {
-  composes: nameLine;
-  padding: 0;
-  margin-bottom: 0;
-}
-
-.import {
-  composes: buttonSecondary from '../Button/Button.module.css';
-  margin-top: 1rem;
-}
-
-.create {
+.add {
   composes: avatar from '../../components/Avatar/Avatar.module.css';
   background: rgba(0, 0, 0, 0.3) url('../images/plus-circle.svg') no-repeat center/100%;
   border-radius: 50%;
+  margin-bottom: 1.625rem;
 }
