--- a/src/views/IdentityOverview/IdentityOverview.module.css
+++ b/src/views/IdentityOverview/IdentityOverview.module.css
@@ -23,7 +23,7 @@
   margin: calc(6rem / 16);
 }
 
-.import {
+.add {
   composes: buttonSecondary from '../../components/Button/Button.module.css';
   margin-top: 1rem;
 }
