--- a/src/views/UnlockVestedFunds/UnlockVestedFunds.module.css
+++ b/src/views/UnlockVestedFunds/UnlockVestedFunds.module.css
@@ -12,7 +12,7 @@
 
 .subline {
   composes: subline from '../../components/Typography/Typography.module.css';
-  margin: 0.25rem 0 0.75rem 0;
+  margin: 0 0 0.8125rem 0;
 }
 
 .avatar {
@@ -30,47 +30,8 @@
   margin: 1rem 0;
 }
 
-.resetLine {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: 0.75rem 0;
-}
-
-.reset {
-  composes: smallImportant from '../../components/Typography/Typography.module.css';
-}
-
-.passwordLabel {
-  composes: smallText from '../../components/Typography/Typography.module.css';
-}
-
-.passwordLine {
-  position: relative;
-  margin: 0;
-}
-
-.password {
-  composes: input from '../../components/Input/Input.module.css';
-  width: calc(100% - 3.5rem);
-  padding-right: 2.5rem;
-}
-
-.rememberLabel {
-  composes: smallText from '../../components/Typography/Typography.module.css';
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: 0.75rem 0.5rem 0.75rem 0;
-  cursor: pointer;
-}
-
 .errorTooltip {
   composes: tooltip from '../../components/ErrorTooltip/ErrorTooltip.module.css';
-}
-
-.remember {
-  composes: toggle from '../../components/Toggle/Toggle.module.css';
 }
 
 .buttonsLine {
