SK-331: More text updates

--- a/src/components/UpcomingFeatureModal/UpcomingFeatureModal.module.css
+++ b/src/components/UpcomingFeatureModal/UpcomingFeatureModal.module.css
@@ -11,6 +11,10 @@
   line-height: 1.25rem;
 }
 
+.info a {
+  color: var(--color-light);
+}
+
 .close {
   composes: button from '../../components/Overlay/Overlay.module.css';
 }
