SK-327: font style for decimal places

--- a/src/components/KiltAmount/KiltAmount.module.css
+++ b/src/components/KiltAmount/KiltAmount.module.css
@@ -2,4 +2,10 @@
   composes: balanceText from '../Typography/Typography.module.css';
   margin-left: 0.25em;
   font-size: 1em;
+  line-height: 1em;
+}
+
+.fractional {
+  font-size: 0.7em;
+  vertical-align: text-top;
 }
