design and texts

--- a/src/components/PasswordField/PasswordField.module.css
+++ b/src/components/PasswordField/PasswordField.module.css
@@ -6,7 +6,8 @@
 }
 
 .reset {
-  composes: smallImportant from '../Typography/Typography.module.css';
+  composes: smallText from '../Typography/Typography.module.css';
+  color: var(--color-light);
 }
 
 .passwordLabel {
