--- a/src/views/DidUpgrade/DidUpgrade.module.css
+++ b/src/views/DidUpgrade/DidUpgrade.module.css
@@ -15,12 +15,27 @@
   margin: 0 0 0.8125rem 0;
 }
 
+.costs {
+  composes: smallText from '../../components/Typography/Typography.module.css';
+  font-size: 1.25rem;
+  margin: 0.25rem 0 0 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.details {
+  composes: subline from '../../components/Typography/Typography.module.css';
+  margin: 0.5rem 0 1.5rem 0;
+}
+
 .buttonsLine {
-  margin: 0;
+  margin: 1.5rem 0 0;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 1rem;
+  position: relative;
 }
 
 .cancel {
@@ -33,4 +48,6 @@
 
 .errorTooltip {
   composes: tooltip from '../../components/ErrorTooltip/ErrorTooltip.module.css';
+  top: 2.5rem;
+  left: 64%;
 }
