--- a/src/views/DidUpgrade/DidUpgrade.module.css
+++ b/src/views/DidUpgrade/DidUpgrade.module.css
@@ -29,6 +29,15 @@
   margin: 0.5rem 0 1.5rem 0;
 }
 
+.info {
+  background: url('../../components/images/info-solid.svg') no-repeat center/100%;
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  vertical-align: text-top;
+  margin-top: 0.125em;
+}
+
 .buttonsLine {
   margin: 1.5rem 0 0;
   display: flex;
