--- a/src/views/IdentityOverview/IdentityOverview.module.css
+++ b/src/views/IdentityOverview/IdentityOverview.module.css
@@ -32,11 +32,41 @@
   composes: buttonSecondary from '../../components/Button/Button.module.css';
 }
 
-.subscan {
+.buttonWide {
   composes: buttonPrimary from '../../components/Button/Button.module.css';
-  padding-left: 3rem;
-  padding-right: 6rem;
+  width: calc(284rem / 16);
+  padding: 0;
   border: none;
   box-shadow: none;
-  background: url('../../components/images/subscan-logo.svg') no-repeat 0.75rem center, rgba(0, 0, 0, 0.3)  url('../../components/images/chevron-right.svg') no-repeat right 5% center/0.375rem 0.75rem;
+  margin: 0.5rem 0;
+}
+
+.subscan {
+  composes: buttonWide;
+  background:
+    url('../../components/images/subscan-logo.svg') no-repeat 0.75rem center,
+    rgba(0, 0, 0, 0.3) url('../../components/images/chevron-right.svg')
+    no-repeat right 5% center/0.375rem 0.75rem;
+}
+
+.upgrade {
+  composes: buttonWide;
+  justify-content: flex-start;
+  background:
+    rgba(0, 0, 0, 0.3)
+    url('../../components/images/chevron-right.svg') no-repeat right 5%
+    center/0.375rem 0.75rem;
+}
+
+.avatarSmall {
+  composes: avatar from '../../components/Avatar/Avatar.module.css';
+
+  --size: calc(24rem / 16);
+
+  width: var(--size);
+  height: var(--size);
+  align-self: center;
+  margin-left: 0.5rem;
+  margin-right: 1.5rem;
+  background: rgba(255, 101, 0, 0.6);
 }
