Moved full did check to Avatar component

--- a/src/views/IdentityOverview/IdentityOverview.module.css
+++ b/src/views/IdentityOverview/IdentityOverview.module.css
@@ -68,5 +68,7 @@
   align-self: center;
   margin-left: 0.5rem;
   margin-right: 1.5rem;
-  background: rgba(255, 101, 0, 0.6);
+
+  /* --color-orange */
+  background: rgba(255, 101, 0, 0.6) no-repeat;
 }
