--- a/src/components/Avatar/Avatar.module.css
+++ b/src/components/Avatar/Avatar.module.css
@@ -15,3 +15,8 @@
   height: var(--size);
   border-radius: 50%;
 }
+
+.fullDid {
+  /* --color-orange */
+  background: rgba(255, 101, 0, 0.6) no-repeat;
+}
