--- a/src/views/SignDid/SignDid.module.css
+++ b/src/views/SignDid/SignDid.module.css
@@ -17,24 +17,26 @@
 
 .label {
   composes: smallText from '../../components/Typography/Typography.module.css';
-  margin: 0.5rem 0 0;
+  margin: 0;
   text-align: left;
 }
 
 .origin {
   composes: inputText from '../../components/Typography/Typography.module.css';
   margin: 0.5rem 0;
+  text-align: left;
 }
 
 .plaintextLine {
   position: relative;
   width: 100%;
-  margin: 0.5rem 0 0;
+  margin: 0.5rem 0 0.5rem;
 }
 
 .plaintext {
   composes: input from '../../components/Input/Input.module.css';
   width: calc(100% - 3.5rem);
+  height: 3rem;
   padding-right: 2.5rem;
 }
 
