--- a/src/views/SignDid/SignDid.module.css
+++ b/src/views/SignDid/SignDid.module.css
@@ -53,6 +53,7 @@
   align-items: center;
   justify-content: center;
   gap: 1rem;
+  position: relative;
 }
 
 .reject {
@@ -61,4 +62,10 @@
 
 .submit {
   composes: buttonPrimary from '../../components/Button/Button.module.css';
+}
+
+.errorTooltip {
+  composes: tooltip from '../../components/ErrorTooltip/ErrorTooltip.module.css';
+  top: 2.5rem;
+  left: 64%;
 }
