SK-339: Verification test page

--- a/src/views/ShareCredential/ShareCredential.module.css
+++ b/src/views/ShareCredential/ShareCredential.module.css
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: stretch;
   text-align: center;
 }
 
@@ -63,6 +63,7 @@
   align-items: center;
   justify-content: center;
   gap: 1rem;
+  position: relative;
 }
 
 .cancel {
@@ -71,4 +72,10 @@
 
 .submit {
   composes: buttonPrimary from '../../components/Button/Button.module.css';
+}
+
+.errorTooltip {
+  composes: tooltip from '../../components/ErrorTooltip/ErrorTooltip.module.css';
+  top: 2.5rem;
+  left: 64%;
 }
