--- a/src/views/SignQuote/SignQuote.module.css
+++ b/src/views/SignQuote/SignQuote.module.css
@@ -8,12 +8,11 @@
 .heading {
   composes: screenHeadline from '../../components/Typography/Typography.module.css';
   margin: 0;
-  padding-bottom: 1rem;
 }
 
 .subline {
   composes: subline from '../../components/Typography/Typography.module.css';
-  margin: 0.25rem 0 0.5rem 0;
+  margin: 0 0 0.8125rem 0;
 }
 
 .details {
