--- a/src/views/SignQuote/SignQuote.module.css
+++ b/src/views/SignQuote/SignQuote.module.css
@@ -8,12 +8,11 @@
 .heading {
   composes: screenHeadline from '../../components/Typography/Typography.module.css';
   margin: 0;
-  padding-bottom: 1rem;
 }
 
 .subline {
   composes: subline from '../../components/Typography/Typography.module.css';
-  margin: 0.25rem 0 0.5rem 0;
+  margin: 0 0 0.8125rem 0;
 }
 
 .details {
@@ -42,40 +41,9 @@
   margin: 0.5rem 0 1rem;
 }
 
-.identity {
-  composes: identityText from '../../components/Typography/Typography.module.css';
-  margin: 1.5rem 0 0.5rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 0.5rem;
-}
-
-.identityName {
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  max-width: 90%;
-}
-
-.avatar {
-  composes: avatar from '../../components/Avatar/Avatar.module.css';
-
-  --size: calc(29rem / 16);
-
-  width: var(--size);
-  height: var(--size);
-}
-
 .label {
   composes: smallText from '../../components/Typography/Typography.module.css';
   text-align: left;
-}
-
-.name {
-  composes: input from '../../components/Input/Input.module.css';
-  width: calc(100% - 2rem);
-  margin-top: 0.5rem;
 }
 
 .buttonsLine {
