--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -21,7 +21,7 @@
   background-size: var(--footer-height);
   background-image: linear-gradient(var(--gradient-start) 0%, var(--gradient-end) var(--footer-height));
   background-position: bottom;
-  box-shadow: 0.375rem 0.375rem 0.75rem 0 rgba(0, 0, 0, 0.5);
+  box-shadow: 0.375rem 0.375rem 0.75rem 0 rgba(var(--color-black-rgb), 0.5);
   z-index: 1;
 }
 
@@ -63,11 +63,11 @@
   margin: 0;
   padding: 0;
   border-top: 1px solid #655276;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.33);
+  border-bottom: 1px solid rgba(var(--color-black-rgb), 0.33);
 }
 
 .listItem:hover {
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(var(--color-black-rgb), 0.2);
 }
 
 .disabled {
