--- a/src/components/IdentitySlide/IdentitySlide.module.css
+++ b/src/components/IdentitySlide/IdentitySlide.module.css
@@ -47,7 +47,7 @@
 
 .add {
   composes: avatar from '../../components/Avatar/Avatar.module.css';
-  background: rgba(0, 0, 0, 0.3) url('../images/plus-circle.svg') no-repeat center/100%;
+  background: rgba(var(--color-black-rgb), 0.3) url('../images/plus-circle.svg') no-repeat center/100%;
   border-radius: 50%;
   margin-bottom: 1.625rem;
 }
