--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -4,7 +4,7 @@
   padding: 0 1rem 0.125rem 1rem;
   border: 0;
   border-radius: 1.125rem;
-  box-shadow: inset 1px 1px 1px 0 rgba(0, 0, 0, 0.4);
+  box-shadow: inset 1px 1px 1px 0 rgba(var(--color-black-rgb), 0.4);
   background-color: var(--color-dark);
   background-image: var(--input-gradient);
   caret-color: var(--color-grey-light);
