--- a/src/views/ImportCredentials/ImportCredentials.module.css
+++ b/src/views/ImportCredentials/ImportCredentials.module.css
@@ -57,7 +57,7 @@
 .fileImport {
   --color-text: var(--color-grey-light);
   --color-bar: transparent;
-  --background-image: url('../../components/images/json.svg');
+  --background-image: url('/src/components/images/json.svg');
 
   margin-bottom: 1.25rem;
   padding-left: 3.25rem;
@@ -136,7 +136,7 @@
 
   --color-text: #f00;
   --color-bar: rgb(255 0 0 / 50%);
-  --background-image: url('../../components/images/json-red.svg');
+  --background-image: url('/src/components/images/json-red.svg');
 }
 
 .cancel {
@@ -147,7 +147,7 @@
   composes: buttonWide from '../../components/Button/Button.module.css';
   margin-block: 0.5rem;
 
-  --wide-button-icon: url('../../components/images/import.svg');
+  --wide-button-icon: url('/src/components/images/import.svg');
 }
 
 .home {
