--- a/src/views/W3NManage/W3NManage.module.css
+++ b/src/views/W3NManage/W3NManage.module.css
@@ -19,12 +19,12 @@
   margin-bottom: 0.25rem;
 
   --copy-value-icon-size: 1.5rem;
-  --copy-value-icon: url('../../components/images/web3name.svg');
+  --copy-value-icon: url('/src/components/images/web3name.svg');
 }
 
 .remove {
   composes: buttonWide from '../../components/Button/Button.module.css';
   margin: 0.75rem 0 0;
 
-  --wide-button-icon: url('../../components/images/web3name.svg');
+  --wide-button-icon: url('/src/components/images/web3name.svg');
 }
