--- a/src/components/PasswordField/PasswordField.module.css
+++ b/src/components/PasswordField/PasswordField.module.css
@@ -1,4 +1,5 @@
 .resetLine {
+  align-self: stretch;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -17,6 +18,7 @@
 }
 
 .passwordLine {
+  align-self: stretch;
   position: relative;
   margin: 0;
 }
@@ -33,6 +35,7 @@
 
 .rememberLabel {
   composes: smallText from '../Typography/Typography.module.css';
+  align-self: stretch;
   display: flex;
   align-items: center;
   justify-content: space-between;
