--- a/src/components/View/View.module.css
+++ b/src/components/View/View.module.css
@@ -10,3 +10,10 @@
   box-sizing: border-box;
   margin: auto;
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
