--- a/src/views/App/App.module.css
+++ b/src/views/App/App.module.css
@@ -10,7 +10,7 @@ body {
 }
 
 .container {
-  composes: view from "../../components/View/View.module.css";
+  composes: view from '../../components/View/View.module.css';
 }
 
 .menus {
