--- a/src/views/ImportBackupPhrase/ImportBackupPhrase.module.css
+++ b/src/views/ImportBackupPhrase/ImportBackupPhrase.module.css
@@ -1,7 +1,5 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  composes: container from '../../components/View/View.module.css';
 }
 
 .heading {
@@ -23,6 +21,7 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  text-align: left;
 }
 
 .item::marker {
