--- a/src/views/ReviewTransaction/ReviewTransaction.module.css
+++ b/src/views/ReviewTransaction/ReviewTransaction.module.css
@@ -1,8 +1,5 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-  text-align: center;
+  composes: container from '../../components/View/View.module.css';
 }
 
 .heading {
@@ -16,12 +13,14 @@
 
 .recipient {
   composes: smallText from '../../components/Typography/Typography.module.css';
+  width: 100%;
   text-align: left;
   margin: 0;
 }
 
 .address {
   composes: inputText from '../../components/Typography/Typography.module.css';
+  width: 100%;
   text-align: left;
   margin: 0.5rem 0;
 }
