--- a/src/views/UnlockVestedFunds/UnlockVestedFunds.module.css
+++ b/src/views/UnlockVestedFunds/UnlockVestedFunds.module.css
@@ -1,8 +1,5 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-  text-align: center;
+  composes: container from '../../components/View/View.module.css';
 }
 
 .heading {
