--- a/src/views/Welcome/Welcome.module.css
+++ b/src/views/Welcome/Welcome.module.css
@@ -1,8 +1,5 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  composes: container from '../../components/View/View.module.css';
   height: 100%;
   padding-bottom: 5rem;
   box-sizing: border-box;
