--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -92,3 +92,12 @@
     inset -1px 1px 1px 0 rgba(var(--color-white-rgb), 0.1),
     0.375rem 0.375rem 0.75rem 0 rgba(var(--color-black-rgb), 0.2);
 }
+
+.buttonsLine {
+  margin: 1rem 0 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  position: relative;
+}
