--- a/src/views/DidUpgrade/DidUpgrade.module.css
+++ b/src/views/DidUpgrade/DidUpgrade.module.css
@@ -35,12 +35,8 @@
 }
 
 .buttonsLine {
+  composes: buttonsLine from '../../components/Button/Button.module.css';
   margin: 1.5rem 0 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 1rem;
-  position: relative;
 }
 
 .cancel {
