--- a/src/views/RemoveIdentity/RemoveIdentity.module.css
+++ b/src/views/RemoveIdentity/RemoveIdentity.module.css
@@ -36,15 +36,12 @@
 }
 
 .buttonsLine {
+  composes: buttonsLine from '../../components/Button/Button.module.css';
   margin: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .cancel {
   composes: buttonPrimary from '../../components/Button/Button.module.css';
-  margin: 0 1rem;
 }
 
 .remove {
