--- a/src/views/SignDApp/SignDApp.module.css
+++ b/src/views/SignDApp/SignDApp.module.css
@@ -61,11 +61,7 @@
 }
 
 .buttonsLine {
-  margin: 1rem 0 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 1rem;
+  composes: buttonsLine from '../../components/Button/Button.module.css';
 }
 
 .reject {
