--- a/src/views/SignDid/SignDid.module.css
+++ b/src/views/SignDid/SignDid.module.css
@@ -46,12 +46,7 @@
 }
 
 .buttonsLine {
-  margin: 1rem 0 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 1rem;
-  position: relative;
+  composes: buttonsLine from '../../components/Button/Button.module.css';
 }
 
 .reject {
