--- a/src/views/SignQuote/SignQuote.module.css
+++ b/src/views/SignQuote/SignQuote.module.css
@@ -43,11 +43,8 @@
 }
 
 .buttonsLine {
+  composes: buttonsLine from '../../components/Button/Button.module.css';
   margin: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 1rem;
 }
 
 .cancel {
