--- a/src/views/Welcome/Welcome.module.css
+++ b/src/views/Welcome/Welcome.module.css
@@ -1,5 +1,6 @@
 .container {
   composes: container from '../../components/View/View.module.css';
+  justify-content: center;
   height: 100%;
   padding-bottom: 5rem;
   box-sizing: border-box;
