--- a/src/views/Warning/Warning.module.css
+++ b/src/views/Warning/Warning.module.css
@@ -1,8 +1,5 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
+  composes: container from '../../components/View/View.module.css';
 }
 
 .heading {
@@ -12,7 +9,6 @@
   background-size: calc(86rem / 16) calc(118rem / 16);
   background-repeat: no-repeat;
   background-position: center 3.25rem;
-  margin: 0;
   padding-bottom: calc(156rem / 16);
 }
 
