--- a/src/views/DidDowngrade/DidDowngrade.module.css
+++ b/src/views/DidDowngrade/DidDowngrade.module.css
@@ -1,13 +1,9 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-  text-align: center;
+  composes: container from '../../components/View/View.module.css';
 }
 
 .heading {
   composes: screenHeadline from '../../components/Typography/Typography.module.css';
-  margin: 0;
 }
 
 .subline {
@@ -39,12 +35,8 @@
 }
 
 .buttonsLine {
+  composes: buttonsLine from '../../components/Button/Button.module.css';
   margin: 1.5rem 0 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 1rem;
-  position: relative;
 }
 
 .cancel {
@@ -58,5 +50,5 @@
 .errorTooltip {
   composes: tooltip from '../../components/ErrorTooltip/ErrorTooltip.module.css';
   top: 2.5rem;
-  left: 64%;
+  left: 75%;
 }
