--- a/src/views/RemoveIdentity/RemoveIdentity.module.css
+++ b/src/views/RemoveIdentity/RemoveIdentity.module.css
@@ -1,13 +1,9 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
+  composes: container from '../../components/View/View.module.css';
 }
 
 .heading {
   composes: screenHeadline from '../../components/Typography/Typography.module.css';
-  margin: 0;
 }
 
 .subline {
@@ -40,15 +36,12 @@
 }
 
 .buttonsLine {
+  composes: buttonsLine from '../../components/Button/Button.module.css';
   margin: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .cancel {
   composes: buttonPrimary from '../../components/Button/Button.module.css';
-  margin: 0 1rem;
 }
 
 .remove {
