--- a/src/views/ReviewTransaction/ReviewTransaction.module.css
+++ b/src/views/ReviewTransaction/ReviewTransaction.module.css
@@ -1,13 +1,9 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-  text-align: center;
+  composes: container from '../../components/View/View.module.css';
 }
 
 .heading {
   composes: screenHeadline from '../../components/Typography/Typography.module.css';
-  margin: 0;
 }
 
 .subline {
@@ -17,12 +13,14 @@
 
 .recipient {
   composes: smallText from '../../components/Typography/Typography.module.css';
+  width: 100%;
   text-align: left;
   margin: 0;
 }
 
 .address {
   composes: inputText from '../../components/Typography/Typography.module.css';
+  width: 100%;
   text-align: left;
   margin: 0.5rem 0;
 }
@@ -69,11 +67,8 @@
 }
 
 .buttonsLine {
+  composes: buttonsLine from '../../components/Button/Button.module.css';
   margin: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 1rem;
 }
 
 .cancel {
