--- a/src/views/SignDApp/SignDApp.module.css
+++ b/src/views/SignDApp/SignDApp.module.css
@@ -1,13 +1,9 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-  text-align: center;
+  composes: container from '../../components/View/View.module.css';
 }
 
 .heading {
   composes: screenHeadline from '../../components/Typography/Typography.module.css';
-  margin: 0;
 }
 
 .avatar {
@@ -42,6 +38,7 @@
   composes: smallText from '../../components/Typography/Typography.module.css';
   font-size: 0.675rem;
   margin: 0;
+  max-width: 100%;
   display: flex;
   flex-wrap: wrap;
   text-align: left;
@@ -64,11 +61,7 @@
 }
 
 .buttonsLine {
-  margin: 1rem 0 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 1rem;
+  composes: buttonsLine from '../../components/Button/Button.module.css';
 }
 
 .reject {
