--- a/src/views/SignDid/SignDid.module.css
+++ b/src/views/SignDid/SignDid.module.css
@@ -1,13 +1,9 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-  text-align: center;
+  composes: container from '../../components/View/View.module.css';
 }
 
 .heading {
   composes: screenHeadline from '../../components/Typography/Typography.module.css';
-  margin: 0;
 }
 
 .subline {
@@ -17,12 +13,14 @@
 
 .label {
   composes: smallText from '../../components/Typography/Typography.module.css';
+  width: 100%;
   margin: 0;
   text-align: left;
 }
 
 .origin {
   composes: inputText from '../../components/Typography/Typography.module.css';
+  width: 100%;
   margin: 0.5rem 0;
   text-align: left;
 }
@@ -48,12 +46,7 @@
 }
 
 .buttonsLine {
-  margin: 1rem 0 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 1rem;
-  position: relative;
+  composes: buttonsLine from '../../components/Button/Button.module.css';
 }
 
 .reject {
@@ -67,5 +60,5 @@
 .errorTooltip {
   composes: tooltip from '../../components/ErrorTooltip/ErrorTooltip.module.css';
   top: 2.5rem;
-  left: 64%;
+  left: 75%;
 }
