--- a/src/views/VerifyBackupPhrase/VerifyBackupPhrase.module.css
+++ b/src/views/VerifyBackupPhrase/VerifyBackupPhrase.module.css
@@ -1,8 +1,5 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
+  composes: container from '../../components/View/View.module.css';
 }
 
 .info {
@@ -12,7 +9,6 @@
 
 .heading {
   composes: screenHeadline from '../../components/Typography/Typography.module.css';
-  margin: 0;
 }
 
 .selectedWords {
