--- a/src/views/Welcome/Welcome.module.css
+++ b/src/views/Welcome/Welcome.module.css
@@ -1,7 +1,5 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  composes: container from '../../components/View/View.module.css';
   justify-content: center;
   height: 100%;
   padding-bottom: 5rem;
@@ -10,7 +8,6 @@
 
 .heading {
   composes: screenHeadline from '../../components/Typography/Typography.module.css';
-  margin-bottom: 0;
 }
 
 .info {
