Y offset not needed

--- a/src/components/Balance/Balance.module.css
+++ b/src/components/Balance/Balance.module.css
@@ -36,7 +36,6 @@
 .connecting {
   composes: spinner from '../../components/LoadingSpinner/LoadingSpinner.module.css';
   position: absolute;
-  top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translateX(-50%);
 }
