--- a/src/components/Avatar/Avatar.module.css
+++ b/src/components/Avatar/Avatar.module.css
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  background: rgba(var(--color-white-rgb), 0.3) no-repeat;
+  background: rgb(var(--color-white-rgb) / 30%) no-repeat;
 }
 
 .identicon {
@@ -17,5 +17,5 @@
 }
 
 .fullDid {
-  background: rgba(var(--color-orange-rgb), 0.6) no-repeat;
+  background: rgb(var(--color-orange-rgb) / 60%) no-repeat;
 }
