--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -8,18 +8,18 @@
   border: 1px solid var(--color-white);
   border-radius: 1.125rem;
   padding: 0 2rem;
-  background: linear-gradient(rgba(var(--color-black-rgb), 0) 0%, rgba(var(--color-black-rgb), 0.4) 100%);
+  background: linear-gradient(rgb(var(--color-black-rgb) / 0%) 0%, rgb(var(--color-black-rgb) / 40%) 100%);
   box-shadow:
-    inset -1px 1px 1px 0 rgba(var(--color-white-rgb), 0.1),
-    0.375rem 0.375rem 0.75rem 0 rgba(var(--color-black-rgb), 0.2);
+    inset -1px 1px 1px 0 rgb(var(--color-white-rgb) / 10%),
+    0.375rem 0.375rem 0.75rem 0 rgb(var(--color-black-rgb) / 20%);
   cursor: pointer;
 }
 
 .buttonPrimary:disabled,
-.buttonPrimary[aria-disabled=true] {
-  opacity: 0.5;
+.buttonPrimary[aria-disabled='true'] {
+  opacity: 50%;
   color: var(--color-grey-medium);
-  border: 1px solid rgba(var(--color-grey-light-rgb), 0.3);
+  border: 1px solid rgb(var(--color-grey-light-rgb) / 30%);
 }
 
 .buttonSecondary {
@@ -36,8 +36,8 @@
 }
 
 .buttonSecondary:disabled,
-.buttonSecondary[aria-disabled=true] {
-  opacity: 0.5;
+.buttonSecondary[aria-disabled='true'] {
+  opacity: 50%;
   color: var(--color-grey-medium);
 }
 
@@ -50,8 +50,8 @@
 }
 
 .buttonTertiary:disabled,
-.buttonTertiary[aria-disabled=true] {
-  opacity: 0.4;
+.buttonTertiary[aria-disabled='true'] {
+  opacity: 40%;
 }
 
 .buttonIcon {
@@ -75,11 +75,11 @@
   background-image:
     url('../images/checkmark.svg'),
     linear-gradient(#335a87 0%, var(--color-dark) 100%);
-  margin: 0 0.375rem 0 0.375rem;
+  margin: 0 0.375rem;
   box-shadow:
-    inset -1px 1px 1px 0 rgba(var(--color-white-rgb), 0.1),
-    0 0 0 2px rgba(var(--color-white-rgb), 0.05),
-    0.375rem 0.375rem 0.75rem 0 rgba(var(--color-black-rgb), 0.2);
+    inset -1px 1px 1px 0 rgb(var(--color-white-rgb) / 10%),
+    0 0 0 2px rgb(var(--color-white-rgb) / 5%),
+    0.375rem 0.375rem 0.75rem 0 rgb(var(--color-black-rgb) / 20%);
 }
 
 .buttonCross {
@@ -89,8 +89,8 @@
     url('../images/x-close.svg'),
     linear-gradient(#335a87 0%, #2f537e 33%, #264262 100%);
   box-shadow:
-    inset -1px 1px 1px 0 rgba(var(--color-white-rgb), 0.1),
-    0.375rem 0.375rem 0.75rem 0 rgba(var(--color-black-rgb), 0.2);
+    inset -1px 1px 1px 0 rgb(var(--color-white-rgb) / 10%),
+    0.375rem 0.375rem 0.75rem 0 rgb(var(--color-black-rgb) / 20%);
 }
 
 .buttonsLine {
