--- a/src/components/IdentitySlide/IdentitySlide.module.css
+++ b/src/components/IdentitySlide/IdentitySlide.module.css
@@ -34,7 +34,7 @@
   background-repeat: no-repeat;
   background-position: calc(100% - 0.75rem) center, 0;
   padding-right: 2.25rem;
-  margin: 1rem 0 1rem 0;
+  margin: 1rem 0;
 }
 
 .save {
@@ -47,7 +47,7 @@
 
 .add {
   composes: avatar from '../../components/Avatar/Avatar.module.css';
-  background: rgba(var(--color-black-rgb), 0.3) url('../images/plus-circle.svg') no-repeat center/100%;
+  background: rgb(var(--color-black-rgb) / 30%) url('../images/plus-circle.svg') no-repeat center/100%;
   border-radius: 50%;
   margin-bottom: 1.625rem;
 }
