--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -21,7 +21,7 @@
   background-size: var(--footer-height);
   background-image: linear-gradient(var(--gradient-start) 0%, var(--gradient-end) var(--footer-height));
   background-position: bottom;
-  box-shadow: 0.375rem 0.375rem 0.75rem 0 rgba(var(--color-black-rgb), 0.5);
+  box-shadow: 0.375rem 0.375rem 0.75rem 0 rgb(var(--color-black-rgb) / 50%);
   z-index: 1;
 }
 
@@ -31,10 +31,10 @@
   cursor: pointer;
 }
 
-.toggle[aria-expanded=true] {
+.toggle[aria-expanded='true'] {
   /* keep the toggle button visible on top of menu */
   z-index: 2;
-  opacity: 0.35;
+  opacity: 35%;
 }
 
 .heading {
@@ -63,11 +63,11 @@
   margin: 0;
   padding: 0;
   border-top: 1px solid #655276;
-  border-bottom: 1px solid rgba(var(--color-black-rgb), 0.33);
+  border-bottom: 1px solid rgb(var(--color-black-rgb) / 33%);
 }
 
 .listItem:hover {
-  background-color: rgba(var(--color-black-rgb), 0.2);
+  background-color: rgb(var(--color-black-rgb) / 20%);
 }
 
 .disabled {
@@ -87,7 +87,7 @@
 }
 
 .listButton:disabled {
-  opacity: 0.25;
+  opacity: 25%;
 }
 
 .listItem a {
