--- a/src/views/DidDowngrade/DidDowngrade.module.css
+++ b/src/views/DidDowngrade/DidDowngrade.module.css
@@ -8,13 +8,13 @@
 
 .subline {
   composes: subline from '../../components/Typography/Typography.module.css';
-  margin: 0 0 0.8125rem 0;
+  margin: 0 0 0.8125rem;
 }
 
 .costs {
   composes: smallText from '../../components/Typography/Typography.module.css';
   font-size: 1.25rem;
-  margin: 0.25rem 0 0 0;
+  margin: 0.25rem 0 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -22,7 +22,7 @@
 
 .details {
   composes: subline from '../../components/Typography/Typography.module.css';
-  margin: 0.5rem 0 1.5rem 0;
+  margin: 0.5rem 0 1.5rem;
 }
 
 .info {
