--- a/src/views/ExternalAccess/ExternalAccess.module.css
+++ b/src/views/ExternalAccess/ExternalAccess.module.css
@@ -8,7 +8,7 @@
 
 .subline {
   composes: subline from '../../components/Typography/Typography.module.css';
-  margin: 0.25rem 0 1rem 0;
+  margin: 0.25rem 0 1rem;
 }
 
 .small {
