--- a/src/views/IdentityOverview/IdentityOverview.module.css
+++ b/src/views/IdentityOverview/IdentityOverview.module.css
@@ -8,7 +8,7 @@
 
 .info {
   composes: subline from '../../components/Typography/Typography.module.css';
-  margin: 0 0 0.8125rem 0;
+  margin: 0 0 0.8125rem;
 }
 
 .button {
@@ -41,7 +41,7 @@
   composes: buttonWide;
   background:
     url('../../components/images/subscan-logo.svg') no-repeat 0.75rem center,
-    rgba(var(--color-black-rgb), 0.3) url('../../components/images/chevron-right.svg')
+    rgb(var(--color-black-rgb) / 30%) url('../../components/images/chevron-right.svg')
     no-repeat right 5% center/0.375rem 0.75rem;
 }
 
@@ -49,7 +49,7 @@
   composes: buttonWide;
   justify-content: flex-start;
   background:
-    rgba(var(--color-black-rgb), 0.3)
+    rgb(var(--color-black-rgb) / 30%)
     url('../../components/images/chevron-right.svg') no-repeat right 5%
     center/0.375rem 0.75rem;
 }
@@ -64,5 +64,5 @@
   align-self: center;
   margin-left: 0.5rem;
   margin-right: 1.5rem;
-  background: rgba(var(--color-orange-rgb), 0.6) no-repeat;
+  background: rgb(var(--color-orange-rgb) / 60%) no-repeat;
 }
