--- a/src/views/ImportBackupPhrase/ImportBackupPhrase.module.css
+++ b/src/views/ImportBackupPhrase/ImportBackupPhrase.module.css
@@ -9,7 +9,7 @@
 .info {
   composes: subline from '../../components/Typography/Typography.module.css';
   text-align: center;
-  margin: 0.5rem 0 0.5rem 0;
+  margin: 0.5rem 0;
 }
 
 .items {
@@ -19,8 +19,7 @@
   list-style-position: inside;
   padding-left: 0;
   display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
+  flex-flow: column wrap;
   text-align: left;
 }
 
