--- a/src/views/ReceiveToken/ReceiveToken.module.css
+++ b/src/views/ReceiveToken/ReceiveToken.module.css
@@ -8,7 +8,7 @@
 
 .subline {
   composes: subline from '../../components/Typography/Typography.module.css';
-  margin: 0 0 0.8125rem 0;
+  margin: 0 0 0.8125rem;
 }
 
 .small {
@@ -19,7 +19,7 @@
 .addressLine {
   position: relative;
   width: 100%;
-  margin: 0.25rem 0 1.5rem 0;
+  margin: 0.25rem 0 1.5rem;
 }
 
 .address {
@@ -46,7 +46,7 @@
   grid-area: code;
   height: 100%;
   background:
-    rgba(var(--color-black-rgb), 0.7) url('../../components/images/search.svg')
+    rgb(var(--color-black-rgb) / 70%) url('../../components/images/search.svg')
     center center/1.5rem no-repeat;
   border: 0;
   position: relative;
@@ -65,7 +65,7 @@
 
 .dialog::backdrop,
 .dialog + :global(.backdrop) {
-  background: rgba(var(--color-black-rgb), 0.7);
+  background: rgb(var(--color-black-rgb) / 70%);
 }
 
 .dialogClose {
