--- a/src/views/RemoveIdentity/RemoveIdentity.module.css
+++ b/src/views/RemoveIdentity/RemoveIdentity.module.css
@@ -8,12 +8,12 @@
 
 .subline {
   composes: subline from '../../components/Typography/Typography.module.css';
-  margin: 0 0 0.8125rem 0;
+  margin: 0 0 0.8125rem;
 }
 
 .name {
   composes: identityText from '../../components/Typography/Typography.module.css';
-  margin: 0.5rem 0 0.25rem 0;
+  margin: 0.5rem 0 0.25rem;
   max-width: 100%;
   overflow: hidden;
   white-space: nowrap;
