--- a/src/views/ReviewTransaction/ReviewTransaction.module.css
+++ b/src/views/ReviewTransaction/ReviewTransaction.module.css
@@ -8,7 +8,7 @@
 
 .subline {
   composes: subline from '../../components/Typography/Typography.module.css';
-  margin: 0 0 0.8125rem 0;
+  margin: 0 0 0.8125rem;
 }
 
 .recipient {
