--- a/src/views/SendToken/SendToken.module.css
+++ b/src/views/SendToken/SendToken.module.css
@@ -8,7 +8,7 @@
 
 .subline {
   composes: subline from '../../components/Typography/Typography.module.css';
-  margin: 0 0 0.8125rem 0;
+  margin: 0 0 0.8125rem;
 }
 
 .maximum {
@@ -50,7 +50,7 @@
 }
 
 .setTip:disabled {
-  opacity: 0.5;
+  opacity: 50%;
 }
 
 .increase {
