--- a/src/views/SignDApp/SignDApp.module.css
+++ b/src/views/SignDApp/SignDApp.module.css
@@ -14,7 +14,7 @@
 
 .identity {
   composes: identityText from '../../components/Typography/Typography.module.css';
-  margin: 0.5rem 0 0.5rem;
+  margin: 0.5rem 0;
   max-width: 100%;
   overflow: hidden;
   white-space: nowrap;
@@ -24,7 +24,7 @@
 .addressLine {
   position: relative;
   width: 100%;
-  margin: 0.25rem 0 1rem 0;
+  margin: 0.25rem 0 1rem;
 }
 
 .address {
