--- a/src/views/SignDid/SignDid.module.css
+++ b/src/views/SignDid/SignDid.module.css
@@ -8,7 +8,7 @@
 
 .subline {
   composes: subline from '../../components/Typography/Typography.module.css';
-  margin: 0 0 0.8125rem 0;
+  margin: 0 0 0.8125rem;
 }
 
 .label {
@@ -28,7 +28,7 @@
 .plaintextLine {
   position: relative;
   width: 100%;
-  margin: 0.5rem 0 0.5rem;
+  margin: 0.5rem 0;
 }
 
 .plaintext {
