--- a/src/views/SaveCredential/SaveCredential.module.css
+++ b/src/views/SaveCredential/SaveCredential.module.css
@@ -4,6 +4,7 @@
 
 .heading {
   composes: screenHeadline from '../../components/Typography/Typography.module.css';
+  margin-bottom: 1rem;
 }
 
 .subline {
@@ -20,7 +21,7 @@
 }
 
 .detailName {
-  width: 30%;
+  width: 35%;
   margin: 0.125rem;
   text-align: left;
 }
@@ -33,15 +34,26 @@
 
 .warning {
   composes: importantHeadline from '../../components/Typography/Typography.module.css';
-  margin-top: 1rem;
-  padding-top: 8rem;
-  background: url('../../components/images/attention-hand.svg') no-repeat top center;
-  white-space: pre-line;
+  margin: 1rem 0;
+  font-size: 1.375rem;
+}
+
+.label {
+  composes: smallText from '../../components/Typography/Typography.module.css';
+  text-align: left;
+  width: 100%;
+}
+
+.name {
+  composes: inputName from '../../components/Input/Input.module.css';
+  width: 100%;
+  box-sizing: border-box;
+  margin-top: 0.5rem;
 }
 
 .buttonsLine {
   composes: buttonsLine from '../../components/Button/Button.module.css';
-  margin: 0;
+  margin-top: 1.5rem;
 }
 
 .cancel {
@@ -50,4 +62,8 @@
 
 .submit {
   composes: buttonPrimary from '../../components/Button/Button.module.css';
+}
+
+.submit[aria-disabled='true'] {
+  pointer-events: none;
 }
