--- a/src/components/IdentitySlide/IdentitySlide.module.css
+++ b/src/components/IdentitySlide/IdentitySlide.module.css
@@ -42,8 +42,7 @@
 
 .add {
   composes: avatar from '../../components/Avatar/Avatar.module.css';
-  background: rgb(var(--color-black-rgb) / 30%) url('../images/plus-circle.svg')
-    no-repeat center/100%;
+  background: rgb(var(--color-black-rgb) / 30%) url('../images/plus-circle.svg') no-repeat center/100%;
   border-radius: 50%;
   margin-bottom: 1.625rem;
 }
